error and conflict solve

--- a/Encroachment.html
+++ b/Encroachment.html
@@ -648,6 +648,9 @@
         saveBtn.style.display = show ? 'block' : 'none';
         editBtn.style.display = show ? 'block' : 'none';
         deleteBtn.style.display = show ? 'block' : 'none';
+        
+      }
+      if(deleteBtnEdit && saveBtnEdit ){
         deleteBtnEdit.style.display = show ? 'none' : 'block'
         saveBtnEdit.style.display = show ? 'none' : 'block'
       }
