--- a/garden.html
+++ b/garden.html
@@ -635,7 +635,7 @@
     <script src="js/garden.js"></script>
 
     <script>
-       function toggleSelectLayerButton(show) {
+  function toggleSelectLayerButton(show) {
       var saveBtn = document.getElementById('editFeatureButton');
       var editBtn = document.getElementById('saveDataButton');
       var deleteBtn = document.getElementById('deleteFeatureButton');
@@ -645,6 +645,9 @@
         saveBtn.style.display = show ? 'block' : 'none';
         editBtn.style.display = show ? 'block' : 'none';
         deleteBtn.style.display = show ? 'block' : 'none';
+        
+      }
+      if(deleteBtnEdit && saveBtnEdit ){
         deleteBtnEdit.style.display = show ? 'none' : 'block'
         saveBtnEdit.style.display = show ? 'none' : 'block'
       }
