--- a/building.html
+++ b/building.html
@@ -637,7 +637,7 @@
     <script src="js/building.js"></script>
 
     <script>
-    function toggleSelectLayerButton(show) {
+      function toggleSelectLayerButton(show) {
       var saveBtn = document.getElementById('editFeatureButton');
       var editBtn = document.getElementById('saveDataButton');
       var deleteBtn = document.getElementById('deleteFeatureButton');
@@ -647,6 +647,9 @@
         saveBtn.style.display = show ? 'block' : 'none';
         editBtn.style.display = show ? 'block' : 'none';
         deleteBtn.style.display = show ? 'block' : 'none';
+        
+      }
+      if(deleteBtnEdit && saveBtnEdit ){
         deleteBtnEdit.style.display = show ? 'none' : 'block'
         saveBtnEdit.style.display = show ? 'none' : 'block'
       }
@@ -786,6 +789,9 @@
                     department: department,
                     selectCoordinatesData: selectCoordinatesDataSingle.features,
                     area: area,
+                    geometryType:
+                      selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
+                        .geometry.type,
                   });
 
                   $.ajax({
