--- a/road.html
+++ b/road.html
@@ -206,6 +206,9 @@
         saveBtn.style.display = show ? 'block' : 'none';
         editBtn.style.display = show ? 'block' : 'none';
         deleteBtn.style.display = show ? 'block' : 'none';
+        
+      }
+      if(deleteBtnEdit && saveBtnEdit ){
         deleteBtnEdit.style.display = show ? 'none' : 'block'
         saveBtnEdit.style.display = show ? 'none' : 'block'
       }
@@ -406,8 +409,38 @@
                     gis_id: lastInsertedId,
                     department: department,
                     selectCoordinatesData: selectCoordinatesDataSingle.features,
+                    geometryType:
+                      selectCoordinatesDataSingle.features[selectCoordinatesDataSingle.features.length - 1]
+                        .geometry.type,
                   });
+                  if (editMode) {
 
+                let editIdTemp = editId.split(".")[ 1 ];
+                let geometryTypeTemp = editId.split(".")[ 0 ];
+
+                console.log('selectCoordinatesData', selectCoordinatesData);
+
+                $.ajax({
+                  url: 'APIS/Update_Geometry.php', // Path to your PHP save script
+                  type: 'POST',
+                  contentType: 'application/json',
+                  data: JSON.stringify({
+                    selectCoordinatesData: selectCoordinatesDataSingle.features,
+                    fid: editIdTemp,
+                    geometryType:
+                      selectCoordinatesDataSingle.features[ selectCoordinatesDataSingle.features.length - 1 ]
+                        .geometry.type,
+                  }),
+                  success: function (response) {
+                    alert('Data saved successfully!');
+                  },
+                  error: function (error) {
+                    console.error('Save request failed:', error);
+                  }
+                });
+
+                }
+                else {
                   $.ajax({
                     type: "POST",
                     url: "APIS/gis_update.php",
@@ -487,6 +520,7 @@
                       console.error("Save failed:", error);
                     },
                   });
+                }
 
                   area = turf.length(
                     selectCoordinatesDataSingle.features[0].geometry,
