--- a/water-suppy.html
+++ b/water-suppy.html
@@ -624,7 +624,7 @@
   <script src="js/water-supply.js"></script>
 
   <script>
-function toggleSelectLayerButton(show) {
+  function toggleSelectLayerButton(show) {
       var saveBtn = document.getElementById('editFeatureButton');
       var editBtn = document.getElementById('saveDataButton');
       var deleteBtn = document.getElementById('deleteFeatureButton');
@@ -634,6 +634,9 @@ function toggleSelectLayerButton(show) {
         saveBtn.style.display = show ? 'block' : 'none';
         editBtn.style.display = show ? 'block' : 'none';
         deleteBtn.style.display = show ? 'block' : 'none';
+        
+      }
+      if(deleteBtnEdit && saveBtnEdit ){
         deleteBtnEdit.style.display = show ? 'none' : 'block'
         saveBtnEdit.style.display = show ? 'none' : 'block'
       }
