--- a/Environtment.html
+++ b/Environtment.html
@@ -109,6 +109,41 @@
           background: white;
           border-bottom: 2px solid #2b13bb;
         }
+        #saveEditGeomButton {
+    border: 2px solid #2b13bb;
+    border-bottom: 2px solid #2b13bb;
+    border-top: 2px solid #2b13bb;
+    border-radius: 5px 5px 5px 5px;
+    background-color: green;
+    position: fixed;
+    color: black;
+    padding: 0px 5px;
+    top: 85%;
+    /* changed from 683px */
+    font-size: 19px;
+    height: 37px;
+    width: 37px;
+    left: 50%;
+    /* changed from 865px */
+  }
+
+  #deleteEditGeomButton {
+    border: 2px solid #2b13bb;
+    border-bottom: 2px solid #2b13bb;
+    border-top: 2px solid #2b13bb;
+    border-radius: 5px 5px 5px 5px;
+    background-color: green;
+    position: fixed;
+    color: black;
+    padding: 0px 5px;
+    top: 85%;
+    /* changed from 683px */
+    font-size: 19px;
+    height: 37px;
+    width: 37px;
+    left: 47%;
+    /* changed from 865px */
+  }
         #deleteFeatureButton {
           border: 2px solid #2b13bb;
           border-top: 2px solid #2b13bb;
