--- a/gardenhoriculture.html
+++ b/gardenhoriculture.html
@@ -619,10 +619,13 @@
 				let bbox = map.getBounds().toBBoxString();
 				let layer = 'pmc:Bhavan';
 
-				var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
-					e.containerPoint.x
-				)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y
-					}&BBOX=${bbox}`;
+				var baseUrl = "http://iwmsgis.pmc.gov.in:8080/geoserver1/demo/wms"
+
+var url =  baseUrl + `?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
+  e.containerPoint.x
+)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${
+  size.x
+}&HEIGHT=${size.y}&BBOX=${bbox}`;
 
 				fetch(url)
 					.then((response) => response.json())
