--- a/geometry.html
+++ b/geometry.html
@@ -203,7 +203,7 @@
         var osm = L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
             maxZoom: 19
         }).addTo(map);
-        var baseURL = "https://iwmsgis.pmc.gov.in/geoserver/pmc/wms";
+        var baseURL = "http://iwmsgis.pmc.gov.in:8080/geoserver1/demo/wms";
         // var demoURL ="http://iwmsgis.pmc.gov.in:8080/geoserver1/demo/wms";
         var IWMS_line = L.tileLayer.wms(baseURL, {
             layers: "IWMS_line",
@@ -509,7 +509,7 @@ window.location.href = baseURL + queryString;
                 const layerDetails = [ "id", "Work_ID", "Name_of_Work", "Department", "Project_Office", "zone", "ward", "Tender_Amount", "Name_of_JE", "length_1", "width", "area", "geometry" ];
 
                 layers.forEach(function (layerName) {
-                    const urlm = "https://iwmsgis.pmc.gov.in/geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
+                    const urlm =  geoserverUrl + "/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
                         layerName +
                         "&CQL_FILTER=" +
                         filters +
@@ -683,7 +683,7 @@ window.location.href = baseURL + queryString;
                 let pendingRequests = layers.length;
 
                 layers.forEach(function (layerName) {
-                    const urlm = "https://iwmsgis.pmc.gov.in/geoserver/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
+                    const urlm =  geoserverUrl + "/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=" +
                         layerName +
                         "&CQL_FILTER=" +
                         filter +
