--- a/road.html
+++ b/road.html
@@ -272,21 +272,18 @@
         map.on("click", function (e) {
           let size = map.getSize();
           let bbox = map.getBounds().toBBoxString();
-          let layer = "pmc:Exist_Road";
+        
 
-          if (department == "Road") {
-            layer = "pmc:Exist_Road";
-          } else if (department == "Building") {
-            layer = "pmc:Reservations";
-          } else if (department == "Drainage") {
-            layer = "pmc:storm_water";
-          }
+        let layers = ["pmc:Exist_Road", "pmc:OSM_Road"];
+        let queryLayers = layers.join(',');
 
-          var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
-            e.containerPoint.x
-          )}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${
-            size.x
-          }&HEIGHT=${size.y}&BBOX=${bbox}`;
+        var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${queryLayers}&STYLES&LAYERS=${queryLayers}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
+          e.containerPoint.x
+        )}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y}&BBOX=${bbox}`;
+
+
+
+                
 
           fetch(url)
             .then((response) => response.json())
@@ -561,7 +558,7 @@
                     contentType: false,
                     success: function (response) {
                       console.log(response);
-                      window.location.href = response.data.redirect_Url;
+                     // window.location.href = response.data.redirect_Url;
                     },
                     error: function (xhr, status, error) {
                       console.error("Save failed:", error);
