--- a/ward.html
+++ b/ward.html
@@ -738,7 +738,7 @@ else {
                   processData: false,
                   contentType: false,
                   success: function (response) {
-                    //window.location.href = response.data.redirect_Url;
+                    window.location.href = response.data.redirect_Url;
                   },
                   error: function (xhr, status, error) {
                     console.error("Save failed:", error);
