--- a/ceo.html
+++ b/ceo.html
@@ -984,7 +984,7 @@ else {
         contentType: false,
         success: function (response) {
        
-          //window.location.href = response.data.redirect_Url;
+          window.location.href = response.data.redirect_Url;
         },
         error: function (xhr, status, error) {
           console.error("Save failed:", error);
