--- a/road.html
+++ b/road.html
@@ -558,7 +558,7 @@
                     contentType: false,
                     success: function (response) {
                       console.log(response);
-                     // window.location.href = response.data.redirect_Url;
+                      window.location.href = response.data.redirect_Url;
                     },
                     error: function (xhr, status, error) {
                       console.error("Save failed:", error);
