--- a/geometry.html
+++ b/geometry.html
@@ -256,8 +256,8 @@
 
         var highlightLayer;
 
-        // const API_URL = "http://localhost/pmc_test/";
-        const API_URL = "http://localhost/PMC/IWMS_main/";
+         const API_URL = "http://localhost/pmc_test/";
+        //const API_URL = "http://localhost/PMC/IWMS_main/";
 // const API_URL = "https://iwmsgis.pmc.gov.in/gis/iwms/";
 // const API_URL = "https://iwmsgis.pmc.gov.in/gis/test/";  
 
