--- a/ward.html
+++ b/ward.html
@@ -45,6 +45,46 @@
     /* changed from 865px */
   }
 
+  #save-button {
+          /* border: 2px solid rgb(187, 187, 187); */
+          border-radius: 5px 5px 5px 5px;
+          background-color: white;
+          color: black;
+          padding: 7px;
+          display: none;
+          position: fixed;
+          border: 2px solid #2b13bb;
+          border-top: 2px solid #2b13bb;
+          border-bottom: 2px solid #2b13bb;
+          top: 91%;
+          height: 37px;
+          width: 37px;
+          left: 38.8%;
+          font-size: 15px;
+          border-bottom: 2px solid #2b13bb;
+        }
+
+  .delete-button {
+          border: 2px solid #2b13bb;
+          padding: 6px 7.3px;
+          font-size: 14px;
+          border-radius: 5px 5px 5px 5px;
+          display: block;
+          background-color: white;
+          color: black;
+          cursor: pointer;
+          left: 39%;
+          position: fixed;
+          top: 91% !important;
+          height: 37px;
+          width: 37px;
+          display: none;
+          border-top: 2px solid #2b13bb !important;
+          border-bottom: 2px solid #2b13bb !important;
+          border-left: 2px solid #2b13bb !important;
+          border-right: 2px solid #2b13bb !important;
+        }
+
   #deleteEditGeomButton {
     border: 2px solid #2b13bb;
     border-bottom: 2px solid #2b13bb;
@@ -773,15 +813,15 @@
     document.getElementById("editFeatureButton").addEventListener("click", function (event) {
           event.preventDefault();
           event.stopPropagation();
-          coordinatesData.forEach((layer) => {
-            if (layer.editing) {
-                    layer.editing.enable();
-                    updatePopupEdit(layer);
-                    layer.on('edit', function () {
-                      updatePopupEdit(layer);
-                    });
-                }
-            });
+          // coordinatesData.forEach((layer) => {
+          //   if (layer.editing) {
+          //           layer.editing.enable();
+          //           updatePopupEdit(layer);
+          //           layer.on('edit', function () {
+          //             updatePopupEdit(layer);
+          //           });
+          //       }
+          //   });
         });
 
 
