add pid section in table and search bar

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
 
 
           <select class="form-select ms-auto" aria-label="Select search category" id="search_type"class="custom-dropdown">
-
+            <option value="">Search Type</option>
         
           </select >
 
