--- a/Encroachment.html
+++ b/Encroachment.html
@@ -396,14 +396,14 @@
         left: 7.5%;
         transform: translateX(-50%);
         background-color: white;
-        border: 1px solid black;
+        border: 2px solid darkblue;
         border-radius: 5px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 32px;
-        height: 32px;
+        width: 35px;
+        height: 35px;
         z-index: 1000;
         padding: 10px;
       }
@@ -411,8 +411,9 @@
       #helpButton:hover::after {
         content: "HELP";
         position: absolute;
-        top: calc(100% + 5px);
-        left: 50%;
+        top:2%; 
+        left: 170%; 
+
         transform: translateX(-50%);
         background-color: black;
         color: white;
@@ -471,14 +472,15 @@
 @media only screen and (min-width: 1440px) {
   #helpButton {
     top: 15%;
-    left: 1.5%;
+    left: 2.100%;
   }
   
   #helpButton:hover::after {
-    top: 15%;
-    left: 1.5%;
+    top:2%; 
+    left: 170%; 
   }
 }
+
   </style>
 	
 
