--- a/gardenhoriculture.html
+++ b/gardenhoriculture.html
@@ -14,7 +14,7 @@
 			border-bottom: 2px solid #2b13bb;
 			border-top: 2px solid #2b13bb;
 			border-radius: 5px 5px 5px 5px;
-      background-color: green;
+          background-color: green;
 			position: fixed;
 			color: black;
 			padding: 0px 5px;
@@ -397,14 +397,14 @@
         left: 7.5%;
         transform: translateX(-50%);
         background-color: white;
-        border: 1px solid black;
+        border: 2px solid darkblue;
         border-radius: 5px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 32px;
-        height: 32px;
+        width: 35px;
+        height: 35px;
         z-index: 1000;
         padding: 10px;
       }
@@ -472,12 +472,12 @@
 @media only screen and (min-width: 1440px) {
   #helpButton {
     top: 15%;
-    left: 1.5%;
+    left: 2.100%;
   }
   
   #helpButton:hover::after {
-    top: 15%;
-    left: 1.5%;
+    top:2%; 
+    left: 170%; 
   }
 }
 		</style>
