--- a/solidWasteManagement.html
+++ b/solidWasteManagement.html
@@ -451,14 +451,14 @@
         left: 7.5%;
         transform: translateX(-50%);
         background-color: white;
-        border: 1px solid black;
+        border: 2px solid darkblue;
         border-radius: 5px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 32px;
-        height: 32px;
+        width: 35px;
+        height: 35px;
         z-index: 1000;
         padding: 10px;
       }
@@ -526,12 +526,13 @@
 @media only screen and (min-width: 1440px) {
   #helpButton {
     top: 15%;
-    left: 1.5%;
+    left: 2.1%;
+
   }
   
   #helpButton:hover::after {
-    top: 15%;
-    left: 1.5%;
+    top:2%; 
+    left: 170%; 
   }
 }
     </style>
