--- a/water-suppy.html
+++ b/water-suppy.html
@@ -8,6 +8,52 @@
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" />
   <style>
+    .swal2-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1.8em;
+    font-size: 11px !important;
+}
+    .swal2-content {
+    z-index: 1;
+    justify-content: center;
+    margin: 0;
+    padding: 0 1.6em;
+    font-size: 1.125em;
+    font-weight: 400;
+    line-height: normal;
+    text-align: left !important;
+    word-wrap: break-word;
+}
+.swal2-input[type=number] {
+    max-width: 5em !important;
+    height: 35px;
+}
+.swal2-file, .swal2-input, .swal2-textarea {
+   
+    margin-top: -25px !important;
+    margin-left: 98px !important;
+    transition: border-color .3s, box-shadow .3s;
+    border: 1px solid #d9d9d9;
+    border-radius: .1875em;
+    background: inherit;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .06);
+    color: inherit;
+    font-size: 1.125em;
+}
+.swal2-actions {
+    display: flex;
+    z-index: 1;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 12px !important;
+    margin: 0px !important;
+    padding: 0;
+}
     @media (min-width: 768px){
       /* .draw_feature{
         display: none;
@@ -470,17 +516,17 @@
 #helpButton {
     position: absolute;
     top: 15%;
-    left: 1.5%;
+    left: 2.1%;
     transform: translateX(-50%);
     background-color: white;
-    border: 1px solid black;
+    border: 2px solid darkblue;
     border-radius: 5px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 28px;
-    height: 28px;
+    width: 35px;
+    height: 35px;
     z-index: 1000;
     padding: 10px; 
 }
@@ -488,8 +534,8 @@
 #helpButton:hover::after {
     content: "HELP"; 
     position: absolute;
-    top: calc(100% + 5px); 
-    left: 50%; 
+    top:2%; 
+    left: 170%; 
     transform: translateX(-50%);
     background-color: black;
     color: white;
