change the popup ui water and drainage

--- a/water-suppy.html
+++ b/water-suppy.html
@@ -27,13 +27,13 @@
     word-wrap: break-word;
 }
 .swal2-input[type=number] {
-    max-width: 5em !important;
+    max-width: 7em !important;
     height: 35px;
 }
 .swal2-file, .swal2-input, .swal2-textarea {
    
     margin-top: -25px !important;
-    margin-left: 98px !important;
+ 
     transition: border-color .3s, box-shadow .3s;
     border: 1px solid #d9d9d9;
     border-radius: .1875em;
@@ -53,6 +53,11 @@
     font-size: 12px !important;
     margin: 0px !important;
     padding: 0;
+}
+.swal2-input[type=number] {
+    max-width: 7em !important;
+    height: 35px;
+    margin-left: 148px;
 }
     @media (min-width: 768px){
       /* .draw_feature{
