--- a/ward.html
+++ b/ward.html
@@ -642,6 +642,7 @@
                       selectCoordinatesData: selectCoordinatesDataSingle,
                       area: area,
                       geometryType:selectCoordinatesDataSingle.geometry.type,
+                      isWardSelection : true ,  
                     });
 
                     if (editMode) {
