Change 8080 url to https

--- a/Environtment.html
+++ b/Environtment.html
@@ -651,6 +651,7 @@
       if(deleteBtnEdit && saveBtnEdit ){
         deleteBtnEdit.style.display = show ? 'none' : 'block'
         saveBtnEdit.style.display = show ? 'none' : 'block'
+        // editBtn.style.display = show ? 'none' : 'block';
       }
     }
 
