--- a/geometry.html
+++ b/geometry.html
@@ -204,7 +204,7 @@
             maxZoom: 19
         }).addTo(map);
         var baseURL = "https://iwmsgis.pmc.gov.in/geoserver/pmc/wms";
-        // var demoURL ="http://iwmsgis.pmc.gov.in:8080/geoserver1/demo/wms";
+        // var demoURL ="https://iwmsgis.pmc.gov.in/geoserver/demo/wms";
         var IWMS_line = L.tileLayer.wms(baseURL, {
             layers: "IWMS_line",
             format: "image/png",
