--- a/drainage.html
+++ b/drainage.html
@@ -739,6 +739,8 @@ function toggleSelectLayerButton(show) {
 
 
 
+    var baseUrl = "https://iwmsgis.pmc.gov.in/geoserver/pmc/wms"
+
     function performTask() {
           map.on("click", function (e) {
             let size = map.getSize();
@@ -746,9 +748,9 @@ function toggleSelectLayerButton(show) {
           let layers = ["pmc:storm_water", "pmc:Reservations"];
 let queryLayers = layers.join(',');
 
-var baseUrl = "http://iwmsgis.pmc.gov.in:8080/geoserver1/demo/wms"
+   var baseUrl = "https://iwmsgis.pmc.gov.in/geoserver/pmc/wms"
 
-var url =  baseUrl + `?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
+var url =  baseUrl + `?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${queryLayers}&STYLES&LAYERS=${queryLayers}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
   e.containerPoint.x
 )}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${
   size.x
